--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.4.0"
   }
 }
