--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-awesome-reveal": "^3.3.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
